--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ body {
   color: #0c0c0c;
   background-color: #ffffff;
 }
-
 .hide {
   display: none;
 }
@@ -365,7 +364,9 @@ a:focus {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
+.glass_section .glass_container .item_box {
+  position: relative;
+}
 .glass_section .glass_container .box {
   width: 265px;
   margin: 10px;
@@ -399,6 +400,10 @@ a:focus {
           align-items: center;
 }
 
+.item_box:hover .detail_item{
+  display: block;
+}
+
 .glass_section .glass_container .box .img-box img {
   max-width: 100%;
 }
@@ -406,6 +411,7 @@ a:focus {
 .glass_section .glass_container .box .price a {
   color: #bcc4f2;
   text-decoration: underline;
+  
 }
 
 .glass_section .btn-box {
@@ -446,6 +452,65 @@ a:focus {
   color: #eb19b7;
 }
 
+/* detail item */
+.alpha {
+  float: left;
+}
+.omega {
+  float: right;
+}
+.container_detail {
+  display: flex;
+}
+.detail_item {
+  background-color: rgb(255, 255, 255);
+
+  position: absolute;
+  z-index: 10;
+  
+  width: 130%;
+  height: 100%;
+  padding: 10px;
+
+  left: -15%;
+  top: 0;
+
+  border-radius: 15px;
+  box-shadow: 0px 10px 50px 20px #bcc4f2;
+
+  display: none;
+}
+
+.detail_item .omega h5{
+  margin-top: 20px;
+}
+.detail_item .omega h6{
+  margin-top: 20px;
+}
+.detail_item .omega .infor {
+  display: inline-block;
+  text-align: center;
+}
+.comment {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 20px;
+}
+.comment h5{
+  margin-right: 10px;
+}
+.comment input {
+  border-top-style: hidden;
+  border-right-style: hidden;
+  border-left-style: hidden;
+  border-bottom-style: groove;
+}
+.comment input:focus{
+  outline: none;
+}
 .quality_section .nav-tabs {
   border: none;
 }
