--- a/form login/css/app.css
+++ b/form login/css/app.css
@@ -62,3 +62,10 @@ body{
 .form-submit:hover{
     border: 1px solid #54a0ff;
 }
+
+.link {
+    margin-top: 20px;
+}
+.signin {
+    margin-right: 20px;
+}
