--- a/src/main/webapp/css/form/form signin/app.css
+++ b/src/main/webapp/css/form/form signin/app.css
@@ -1,5 +1,5 @@
 body{
-    background: url('../img/gl.webp');
+    background: url('img/gl.webp');
     background-size: cover;
     background-position-y: -80px;
     font-size: 16px;
